--- a/app/src/main/res/layout/articile_detail_activity.xml
+++ b/app/src/main/res/layout/articile_detail_activity.xml
@@ -5,24 +5,44 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:background="#aca8a8"
+        android:background="#f3efef"
         android:layout_alignParentTop="true"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="50dp">
+        <ImageView
+            android:layout_weight="1"
+            android:layout_marginLeft="8dp"
+            android:layout_gravity="center"
+            android:src="@drawable/left_back_button_normal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_weight="15"
+            android:text=""
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <ImageView
+            android:layout_weight="1"
+            android:layout_marginRight="8dp"
+            android:layout_gravity="center"
+            android:src="@drawable/more_dynamic_normal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
+    <ScrollView
         android:layout_marginBottom="50dp"
         android:layout_marginTop="50dp"
-        android:id="@+id/id_article_detail_recyclerview"
+        android:id="@+id/id_article_detail_scrollview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal|top"
         android:scrollbars="vertical"/>
 
     <LinearLayout
-        android:background="#aca8a8"
+        android:background="#f3efef"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal"
         android:layout_width="match_parent"
