--- a/app/src/main/res/layout/home_articile_detail_activity.xml
+++ b/app/src/main/res/layout/home_articile_detail_activity.xml
@@ -11,10 +11,18 @@
         android:layout_width="match_parent"
         android:layout_height="50dp">
         <ImageView
-            android:layout_weight="1"
+            android:id="@+id/id_home_article_detail_backward"
+            android:layout_weight="0.6"
             android:layout_marginLeft="8dp"
             android:layout_gravity="center"
             android:src="@drawable/left_back_button_normal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/id_home_article_detail_backward_text"
+            android:layout_weight="0.6"
+            android:text="返回"
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
@@ -24,10 +32,19 @@
             android:layout_height="wrap_content" />
 
         <ImageView
-            android:layout_weight="1"
-            android:layout_marginRight="8dp"
+            android:id="@+id/id_home_article_detail_share"
+            android:layout_weight="0.6"
+            android:layout_marginRight="0dp"
             android:layout_gravity="center"
             android:src="@drawable/more_dynamic_normal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/id_home_article_detail_share_text"
+            android:layout_weight="0.6"
+            android:layout_marginRight="8dp"
+            android:text="分享"
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
@@ -39,7 +56,67 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal|top"
-        android:scrollbars="vertical"/>
+        android:scrollbars="vertical">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <!-- 文章标题 -->
+            <TextView
+                android:text="文章标题:这里填写文章的标题"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:textStyle="bold"
+                android:textSize="16dp"
+                android:textAlignment="center"
+                android:layout_width="match_parent"
+                android:layout_height="30dp" />
+
+            <!-- 作者，关注 -->
+            <LinearLayout
+                android:layout_marginBottom="8dp"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:layout_marginLeft="15dp"
+                    android:orientation="vertical"
+                    android:layout_weight="10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:text="作者：张学强"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                    <TextView
+                        android:text="日期：2016.7.13"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+
+                <ImageView
+                    android:layout_marginRight="15dp"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:src="@drawable/takenote"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
+            <WebView
+                android:id="@+id/id_article_detail_webview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </WebView>
+
+        </LinearLayout>
+
+        </ScrollView>
 
     <LinearLayout
         android:background="#f3efef"
