--- a/app/src/main/res/layout/home_articile_detail_activity.xml
+++ b/app/src/main/res/layout/home_articile_detail_activity.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!--页面头部：返回，分享-->
     <LinearLayout
         android:background="#f3efef"
         android:layout_alignParentTop="true"
@@ -18,6 +19,7 @@
             android:src="@drawable/left_back_button_normal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+
         <TextView
             android:id="@+id/id_home_article_detail_backward_text"
             android:layout_weight="0.6"
@@ -25,6 +27,7 @@
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+
         <TextView
             android:layout_weight="15"
             android:text=""
@@ -39,6 +42,7 @@
             android:src="@drawable/more_dynamic_normal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+
         <TextView
             android:id="@+id/id_home_article_detail_share_text"
             android:layout_weight="0.6"
@@ -49,6 +53,7 @@
             android:layout_height="wrap_content" />
     </LinearLayout>
 
+    <!--页面主体部分：可滚动的文章内容-->
     <ScrollView
         android:layout_marginBottom="50dp"
         android:layout_marginTop="50dp"
@@ -73,7 +78,7 @@
                 android:layout_marginLeft="20dp"
                 android:textStyle="bold"
                 android:textColor="#020000"
-                android:textSize="18dp"
+                android:textSize="20dp"
                 android:textAlignment="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -93,13 +98,13 @@
                     android:layout_height="wrap_content">
                     <TextView
                         android:id="@+id/id_article_detail_category"
-                        android:textColor="#020000"
+                        android:textColor="#592102"
                         android:text="类别：烧鸭烧鹅"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
                     <TextView
                         android:id="@+id/id_article_detail_postdatetime"
-                        android:textColor="#020000"
+                        android:textColor="#592102"
                         android:text="日期：2016.7.13"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
@@ -114,7 +119,8 @@
                     android:layout_height="wrap_content" />
 
             </LinearLayout>
-            
+
+            <!-- 灰色分隔线 -->
             <View
                 android:background="#e5e3e3"
                 android:layout_marginRight="15dp"
@@ -124,6 +130,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp" />
 
+            <!-- 文章内容主体部分 -->
             <WebView
                 android:id="@+id/id_article_detail_webview"
                 android:layout_width="match_parent"
@@ -131,10 +138,48 @@
 
             </WebView>
 
+            <!-- 灰色分隔线 -->
+            <View
+                android:background="#e5e3e3"
+                android:layout_marginRight="15dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="12dp"
+                android:layout_width="match_parent"
+                android:layout_height="1dp" />
+
+            <!-- 其它相关板块 -->
+            <LinearLayout
+                android:background="#d1cccc"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ListView
+                    android:id="@+id/id_article_detail_ListView"
+                    android:layout_width="match_parent"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:textSize="11sp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:textAlignment="center"
+                android:text="QQ:1780162380 电话:13509611303 公众号:sz751009"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
         </LinearLayout>
 
         </ScrollView>
 
+    <!--页面尾部：写评论，分享等-->
     <LinearLayout
         android:background="#f3efef"
         android:layout_alignParentBottom="true"
