--- a/app/src/main/res/layout/home_articile_detail_activity.xml
+++ b/app/src/main/res/layout/home_articile_detail_activity.xml
@@ -165,6 +165,29 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="50dp">
+                <TextView
+                    android:textAlignment="center"
+                    android:layout_weight="1"
+                    android:textSize="15sp"
+                    android:id="@+id/id_article_detail_poster"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:textAlignment="center"
+                    android:layout_weight="1"
+                    android:textSize="15sp"
+                    android:id="@+id/id_article_detail_views"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
             <TextView
                 android:textSize="11sp"
                 android:layout_marginTop="8dp"
