--- a/app/src/main/res/layout/home_articile_detail_activity.xml
+++ b/app/src/main/res/layout/home_articile_detail_activity.xml
@@ -74,7 +74,7 @@
                 android:text="文章标题:这里填写文章的标题"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginRight="22dp"
                 android:layout_marginLeft="20dp"
                 android:textStyle="bold"
                 android:textColor="#020000"
@@ -192,6 +192,19 @@
             <com.yuegangshaola.common.ListViewForScrollView
                 android:id="@+id/id_article_detail_relatednews_ListView"
                 android:background="@drawable/home_article_relatednews_bg"
+                android:divider="@null"
+                android:layout_width="match_parent"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="0dp"
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_height="wrap_content"/>
+
+            <com.yuegangshaola.common.ListViewForScrollView
+                android:id="@+id/id_article_detail_replies_ListView"
+                android:divider="@null"
                 android:layout_width="match_parent"
                 android:layout_marginBottom="8dp"
                 android:layout_marginTop="0dp"
