--- a/app/src/main/res/layout/home_articile_detail_relatednews.xml
+++ b/app/src/main/res/layout/home_articile_detail_relatednews.xml
@@ -1,19 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/id_article_detail_relatednews_item"
-        android:textSize="13sp"
+        android:textColor="#600606"
+        android:textSize="15sp"
         android:layout_gravity="left"
         android:gravity="left"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginBottom="3dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="7dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    
+    <View
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="#fefdfd"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"/>
 
 </LinearLayout>
