--- a/app/src/main/res/layout/home_articile_detail_reply.xml
+++ b/app/src/main/res/layout/home_articile_detail_reply.xml
@@ -2,13 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_marginRight="15dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <ImageView
             android:layout_marginRight="10dp"
@@ -20,10 +20,11 @@
 
         <LinearLayout
             android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <TextView
+                android:id="@+id/id_home_article_detail_reply_ip"
                 android:text="别问为什么喜欢"
                 android:layout_marginRight="10dp"
                 android:layout_marginLeft="10dp"
@@ -34,18 +35,20 @@
                 android:layout_height="wrap_content" />
 
             <TextView
+                android:id="@+id/id_home_article_detail_reply_message"
                 android:text="飞机到宝安机场后：转乘 机场10路 车过来，在 西乡步行街 站台下车，然后按照地址走过来即可"
                 android:layout_marginRight="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:textSize="15sp"
                 android:textColor="#a5a1a1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
                 <com.yuegangshaola.common.ListViewForScrollView
+                    android:id="@+id/id_home_article_detail_reply_replies"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="match_parent">
                     <!--  填充 home_article_detail_replyinner.xml  -->
                 </com.yuegangshaola.common.ListViewForScrollView>
 
