--- a/app/src/main/res/layout/home_articile_detail_replyinner.xml
+++ b/app/src/main/res/layout/home_articile_detail_replyinner.xml
@@ -15,20 +15,11 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/id_home_article_detail_replyinner_message"
             android:text="李小兵：俗话说没潮汕肉卷就不叫正宗猪脚饭，猪脚饭的最佳拍档！"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="0dp"
-            android:textSize="13sp"
-            android:textColor="#a5a1a1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:text="学霸：如果学其它项目增加潮州肉卷项目，多加500元"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
             android:textSize="13sp"
             android:textColor="#a5a1a1"
             android:layout_width="wrap_content"
