--- a/app/src/main/res/layout/home_articile_detail_reply.xml
+++ b/app/src/main/res/layout/home_articile_detail_reply.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_marginRight="15dp"
@@ -21,7 +21,7 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/id_home_article_detail_reply_ip"
@@ -41,15 +41,16 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:textSize="15sp"
-                android:textColor="#a5a1a1"
+                android:textColor="#7c7777"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="wrap_content" />
 
+                <!--  填充 home_article_detail_replyinner.xml  -->
                 <com.yuegangshaola.common.ListViewForScrollView
                     android:id="@+id/id_home_article_detail_reply_replies"
+                    android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                    <!--  填充 home_article_detail_replyinner.xml  -->
+                    android:layout_height="wrap_content">
                 </com.yuegangshaola.common.ListViewForScrollView>
 
             <TextView
