--- a/app/src/main/res/layout/home_articile_detail_replyinner.xml
+++ b/app/src/main/res/layout/home_articile_detail_replyinner.xml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="#fbf5f5"
+    android:padding="10dp"
+    android:layout_marginLeft="30dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="5dp"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <LinearLayout
-        android:background="#efeaea"
-        android:padding="10dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/id_home_article_detail_replyinner_message"
@@ -21,10 +16,8 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="0dp"
             android:textSize="13sp"
-            android:textColor="#a5a1a1"
+            android:textColor="#a69f9f"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
     </LinearLayout>
-
-</LinearLayout>
