--- a/app/src/main/res/layout/home_articile_detail_reply.xml
+++ b/app/src/main/res/layout/home_articile_detail_reply.xml
@@ -11,16 +11,19 @@
         android:layout_height="match_parent">
 
         <ImageView
+            android:id="@+id/id_home_article_detail_reply_imgid"
+            android:layout_weight="1"
+            android:src="@drawable/xh_05"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:src="@drawable/xh_05"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content" />
 
         <LinearLayout
+            android:layout_weight="15"
             android:orientation="vertical"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content">
 
             <TextView
@@ -40,8 +43,8 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
-                android:textSize="15sp"
-                android:textColor="#7c7777"
+                android:textSize="13sp"
+                android:textColor="#373434"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
@@ -49,6 +52,7 @@
                 <com.yuegangshaola.common.ListViewForScrollView
                     android:id="@+id/id_home_article_detail_reply_replies"
                     android:layout_marginTop="5dp"
+                    android:layout_marginLeft="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                 </com.yuegangshaola.common.ListViewForScrollView>
