--- a/app/src/main/res/layout/home_articile_detail_replyinner.xml
+++ b/app/src/main/res/layout/home_articile_detail_replyinner.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/id_home_article_detail_replyinner_linearlayout"
     android:background="#fbf5f5"
     android:padding="10dp"
-    android:layout_marginLeft="30dp"
     android:layout_marginTop="8dp"
     android:layout_marginBottom="5dp"
     android:orientation="vertical"
@@ -15,8 +15,8 @@
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="0dp"
-            android:textSize="13sp"
-            android:textColor="#a69f9f"
+            android:textSize="12sp"
+            android:textColor="#7c7777"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
