--- a/app/src/main/res/drawable/home_article_relatednews_bg.xml
+++ b/app/src/main/res/drawable/home_article_relatednews_bg.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <!--solid android:color="@android:color/transparent" /-->
-    <solid android:color="#f5f6f8" />
+    <solid android:color="#e9ecf4" />
     <corners android:radius="5dp" />
-    <stroke android:color="#f5f6f8"
+    <stroke android:color="#e9ecf4"
         android:width="2dp"
         />
 </shape>
