--- a/app/src/main/res/layout/home_articile_detail_replyinner.xml
+++ b/app/src/main/res/layout/home_articile_detail_replyinner.xml
@@ -11,11 +11,12 @@
 
         <TextView
             android:id="@+id/id_home_article_detail_replyinner_message"
-            android:text="李小兵：俗话说没潮汕肉卷就不叫正宗猪脚饭，猪脚饭的最佳拍档！"
+            android:lineSpacingMultiplier="1.3"
+            android:text=""
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="0dp"
-            android:textSize="13sp"
+            android:textSize="15sp"
             android:textColor="#7c7777"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
