--- a/app/src/main/res/layout/home_articile_comment_activity.xml
+++ b/app/src/main/res/layout/home_articile_comment_activity.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/id_home_article_comment_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <LinearLayout
+        android:id="@+id/id_home_article_comment_layout"
+        android:orientation="vertical"
+        android:layout_marginBottom="200dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/id_home_article_comment_innerlayout"
