--- a/app/src/main/res/layout/home_articile_detail_activity.xml
+++ b/app/src/main/res/layout/home_articile_detail_activity.xml
@@ -274,7 +274,12 @@
         </ScrollView>
 
     <!--页面尾部：写评论，分享等-->
+    <!--
+    android:focusable="true"
+    android:focusableInTouchMode="true"
+    -->
     <LinearLayout
+
         android:background="#f3efef"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal"
