--- a/app/src/main/res/layout/home_articile_detail_activity.xml
+++ b/app/src/main/res/layout/home_articile_detail_activity.xml
@@ -299,6 +299,7 @@
             android:layout_height="wrap_content" />
 
         <ImageView
+            android:id="@+id/id_article_detail_scrollcomment"
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
             android:layout_gravity="center"
