--- a/app/src/main/res/layout/home_articile_detail_activity.xml
+++ b/app/src/main/res/layout/home_articile_detail_activity.xml
@@ -85,6 +85,7 @@
 
             <!-- 作者，关注 -->
             <LinearLayout
+                android:id="@+id/id_article_detail_author"
                 android:layout_marginBottom="10dp"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
