--- a/app/src/main/res/layout/home_articile_comment_activity.xml
+++ b/app/src/main/res/layout/home_articile_comment_activity.xml
@@ -25,6 +25,10 @@
             android:gravity="top"
             android:textSize="12sp"
             android:hint="请输入评论内容"
+            android:paddingTop="3dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingBottom="3dp"
             android:layout_margin="10dp"
             android:layout_width="match_parent"
             android:layout_height="100dp" />
